--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 /*
  * Matrix Send'n'Leave Bot - Join rooms we are invited to, send one message than leave.
- * Copyright (C) 2018 Maxime Dor
+ * Copyright (C) 2018 Kamax Sarl
  *
  * https://www.kamax.io/
  *
@@ -32,19 +32,19 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
     }
 }
 
 repositories {
+    jcenter()
     maven {  url 'https://kamax.io/maven/releases/' }
     maven {  url 'https://kamax.io/maven/snapshots/' }
-    jcenter()
 }
 
 dependencies {
     compile 'org.slf4j:slf4j-simple:1.7.25'
-    compile 'io.kamax:matrix-java-sdk:0.0.11-1-g92c6613'
+    compile 'io.kamax:matrix-java-sdk:0.0.15'
 }
 
 shadowJar {
